...
                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                            </navigationBar>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Scanner" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rR8-pv-d3x">
                                <rect key="frame" x="106" y="100" width="193" height="60"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Get Code" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wFX-ki-Dph">
                                                    <rect key="frame" x="321" y="10" width="73" height="20.5"/>
                                                    <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="17"/>
...
                        </constraints>
                    </view>
                    <tabBarItem key="tabBarItem" title="My Buildings" image="building" catalog="system" selectedImage="building" id="MhO-Ca-4bR"/>
                    <navigationItem key="navigationItem" id="SGW-0i-yb4"/>
                    <connections>
...
                                                                <rect key="frame" x="0.0" y="0.0" width="378" height="50"/>
                                                                <subviews>
                                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="TJO-rO-Fgo">
                                                                        <rect key="frame" x="0.0" y="0.0" width="378" height="50"/>
                                                                        <color key="tintColor" systemColor="systemGreenColor"/>
...
                                                                <rect key="frame" x="0.0" y="74" width="378" height="50"/>
                                                                <subviews>
                                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password..." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="29b-Bs-ZbV">
                                                                        <rect key="frame" x="0.0" y="0.0" width="378" height="50"/>
                                                                        <color key="tintColor" systemColor="systemGreenColor"/>
...
                                                    <constraint firstAttribute="height" constant="50" id="ezw-co-6Em"/>
                                                </constraints>
                                                <state key="normal" title="Continue">
                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                </state>
...
                                        <rect key="frame" x="18" y="129.5" width="378" height="564.5"/>
                                        <subviews>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Error" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sxj-XM-QX4">
                                                <rect key="frame" x="0.0" y="0.0" width="378" height="58.5"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                <rect key="frame" x="143" y="725" width="128" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <state key="normal" title="Continue to Profile">
                                    <color key="titleColor" systemColor="systemGreenColor"/>
                                </state>
...
